Changed table-layout and wrap properties on gist embed tables to make cells run long and have the table run shorter. Fixes #86.

--- a/calaccess_website/static/calaccess_website/css/main.css
+++ b/calaccess_website/static/calaccess_website/css/main.css
@@ -369,6 +369,10 @@ td.center, th.center{
 .gist .markdown-body {
     font-size: 10px !important;
 }
+.gist .markdown-body table {
+    table-layout: auto;
+    white-space: nowrap;
+}
 .gist .blob-interaction-bar {
     display: none;
 }
